[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/art/forest/forestDecoration_2.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Gates.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 48, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 96, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 144, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 192, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 168, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 176, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 200, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 24, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 72, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 120, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 168, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 32, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 80, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 128, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 176, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 40, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 88, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 136, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 184, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 192, 170, 8, 17 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 40, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 88, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 136, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 184, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 160, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 56, 187, 8, 17 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 160, 170, 8, 17 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "11",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "10",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "12",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 22, 3.5 )

[node name="Gates" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -20, -16.5 )
frames = SubResource( 25 )
animation = "1"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -12, -16.5 )
frames = SubResource( 25 )
animation = "2"

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( -4, -16.5 )
frames = SubResource( 25 )
animation = "3"
frame = 2
speed_scale = 2.0
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 4, -16.5 )
frames = SubResource( 25 )
animation = "4"
frame = 2
speed_scale = 2.0
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 12, -16.5 )
frames = SubResource( 25 )
animation = "5"

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 20, -16.5 )
frames = SubResource( 25 )
animation = "6"

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
position = Vector2( -20, 0.5 )
frames = SubResource( 25 )
animation = "7"

[node name="AnimatedSprite8" type="AnimatedSprite" parent="."]
position = Vector2( -12, 0.5 )
frames = SubResource( 25 )
animation = "8"
frame = 2
speed_scale = 2.0
playing = true

[node name="AnimatedSprite9" type="AnimatedSprite" parent="."]
position = Vector2( -4, 0.5 )
frames = SubResource( 25 )
animation = "9"
frame = 2
speed_scale = 2.0
playing = true

[node name="AnimatedSprite10" type="AnimatedSprite" parent="."]
position = Vector2( 4, 0.5 )
frames = SubResource( 25 )
animation = "10"
frame = 2
speed_scale = 2.0
playing = true

[node name="AnimatedSprite11" type="AnimatedSprite" parent="."]
position = Vector2( 12, 0.5 )
frames = SubResource( 25 )
animation = "11"
frame = 2
speed_scale = 2.0
playing = true

[node name="AnimatedSprite12" type="AnimatedSprite" parent="."]
position = Vector2( 20, 0.5 )
frames = SubResource( 25 )
animation = "12"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 44 )
